# datafusion-distributed-experiment

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: channel_manager.rs  lib.rs  metadata.rs
src/common/: mod.rs  util.rs
src/exec/: distributed.rs  mod.rs
src/flight_service/: do_get.rs  do_put.rs  mod.rs  service.rs  stream_partitioner_registry.rs
src/plan/: arrow_flight_read.rs  arrow_flight_read_proto.rs  mod.rs
src/remote/: mod.rs
src/stage_delegation/: context.rs  delegation.rs  mod.rs  stage_context.rs  stage_delegation.rs
src/task/: mod.rs  planner.rs  proto.rs  task.rs  tree_node.rs
src/test_utils/: mock_exec.rs  mod.rs
testing/tpch/queries/: q15.sql
tests/: distributed_aggregation.rs  distributed_planning.rs  highly_distributed_query.rs  localhost.rs  stage_planning.rs  task_planning.rs
tests/common/: insta.rs  localhost.rs  mod.rs  parquet.rs  plan.rs
