[package]
name = "datafusion-distributed-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { version = "48.0.0" }
datafusion-proto = { version = "48.0.0" }
arrow-flight = "55.2.0"
async-trait = "0.1.88"
tokio = { version = "1.46.1", features = ["full"] }
# Fixed to 0.12.3 because of arrow-flight
tonic = { version = "0.12.3", features = ["transport"] }
tower = "0.5.2"
http = "1.3.1"
futures = "0.3.31"
url = "2.5.4"
uuid = "1.17.0"
delegate = "0.13.4"
dashmap = "6.1.0"
prost = "0.13.5"

[dev-dependencies]
insta = { version = "1.43.1" , features = ["filters"]}